--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -12,26 +12,26 @@
         <%- include("./layout/new_showcase.ejs") %>
       </div>
 
-      <div style="padding:2.5%;position:relative">
+      <div class="relative padding-2_5">
 
-      <div class="row margin-top-5 clean--new" style="padding:2%">
-          <div class="col-7">
+      <div class="row margin-top-5 clean--new padding-2">
+          <div class="col-7 mobile-col-12">
 
-              <p style="color:white;opacity:.8;font-size:5rem;font-weight:400;line-height:1"> We are Ready to Help
-                <br /> Anytime </p>
+              <p class="clean_title"> We are Ready to Help
+                <br class="crs" /> Anytime </p>
 
-              <div style="margin-top:10%">
-                <p style="color:white;opacity:.8;font-size:1.7rem;font-weight:400;line-height:1.2"> We serve the greater Phoenix area in Arizona, USA </p>
+              <div class="margin-top-10 clean_description_container">
+                <p class="clean_serve""> We serve the greater Phoenix area in Arizona, USA </p>
               </div>
 
-             <div style="margin-top:2.5%">
-              <div style="height:1px;background:white;width:80%"></div>
+             <div class="margin-top-2_5">
+              <div class="serve_line"></div>
 
             </div>
 
           </div>
 
-          <div class="col-4 contact_c_col">
+          <div class="col-4 contact_c_col mobile-col-12">
 
             <p style="color:white;opacity:.8;font-size:1.7rem;font-weight:400;line-height:1.2">Call 480-822-0511 to ensure your windows look great!   </p>
             <div class="margin-top-5">
@@ -52,27 +52,27 @@
             <img class="clean_arrow_img clean_arrow--right " src = "./assets/images/arrow.png"/>
         </div>
 
-        <div class="col-7 ">
+        <div class="col-7 mobile-col-12">
 
-            <p style="color:white;opacity:.8;font-size:5rem;font-weight:600;line-height:1"> What We Clean </p>
+            <p class="progress_clean"> What We Clean </p>
 
-            <div class="progress_container" style="margin-left:20%;margin-top:5%;transform:translate3d(0px,0px,0px)">
+            <div class="progress_container" >
 
               <div class="clean_bubble_ clean_bubble_active" ><p>1</p></div>
               <div class="what_we_clean_line clean_line_active" ></div>
 
-              <div class="clean_bubble" > <p> 2</p></div>
+              <div class="clean_bubble clean_bubble--2" > <p> 2</p></div>
               <div class="what_we_clean_line"></div>
 
-              <div class="clean_bubble" ><p>3</p></div>
+              <div class="clean_bubble clean_bubble--3" ><p>3</p></div>
               <div class="what_we_clean_line"></div>
 
-              <div class="clean_bubble"><p>4</p></div>
+              <div class="clean_bubble clean_bubble--4"><p>4</p></div>
 
           </div>
 
         </div>
-        <div class="col-4">
+        <div class="col-4 mobile-col-12">
           <div class="steps_box">
              <p class="steps_title">1.Window Panes </p>
 
@@ -96,10 +96,10 @@
         </div>
 
       </div>
-        <div class="row">
+        <div class="row ring_row">
 
 
-          <div class="col-4"style="margin-left:2.5%">
+          <div class="col-4 clock_col mobile-col-12">
 
             <div class="relative">
 
@@ -124,9 +124,9 @@
           <div class="col-2">
 
           </div>
-          <div class="col-5">
-              <p style="color;font-size:30px;font-weight:500;color:white;margin-left:10%;margin-top:5%">48 Hour Raincheck Guarantee!</p>
-              <p style="text-align:justify;color;font-size:18px;font-weight:300;color:white;margin-left:10%;margin-top:10%">
+          <div class="col-5 mobile-col-12 text_clock_col">
+              <p class="text_clock_title">48 Hour Raincheck Guarantee!</p>
+              <p class="text_clock_description">
                   We know that one of the most annoying things with windows is paying to have them clean only for it to rain the next day. That is why it is our promise that if it rains within 48-hours of us cleaning
                   your establishment or residence we will come back whenever is best avaiable for you and clean the exterior for free!
               </p>
