--- a/public/assets/css/cfs_modal.css
+++ b/public/assets/css/cfs_modal.css
@@ -27,11 +27,23 @@
 }
 
 .cfs_modal_wrapper{
-  opacity:0;
-  width:100%;
-  height:1080px;
+  width: 100%;
+  background: black;
+  height: 1000%;
+  opacity: .5;
 }
+@keyframes appear{
+  0%{
+    transform:translateY(-100px);
+  }
+  100%{
+    transform:translateY(0px);
+  }
+}
+.modal_body{
+  animation:appear .5s 1 ease-in;
 
+}
 .modal_wrapper_pos{
   top:0%;
   left:0%;
