--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -24,6 +24,7 @@
 
 .button_img{
 filter: invert(23%) sepia(68%) saturate(968%) hue-rotate(167deg) brightness(97%) contrast(103%);
+    filter: invert(100) !important;
 }
 
 .link_nav:hover{
