--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -66,8 +66,23 @@ filter: invert(23%) sepia(68%) saturate(968%) hue-rotate(167deg) brightness(97%)
 }
 
 }
+.navbar_custom{
+  cursor: pointer !important
+}
 @media screen and (max-width:1200px) and (min-width:700px) {
   .navbar_wrapper{
     padding:0%;
   }
+}
+ a{
+  text-decoration: none !important;
+}
+a:hover p{
+  font-weight: normal !important;
+
+}
+.link_nav{
+  text-align: center;
+  z-index:9999;
+  position: relative;
 }
