--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -99,7 +99,7 @@
         <div class="row ring_row">
 
 
-          <div class="col-4 clock_col mobile-col-12">
+          <div class="col-4 clock_col  ">
 
             <div class="relative">
 
@@ -121,10 +121,10 @@
 
           </div>
 
-          <div class="col-2">
+          <div class="col-2 divider-clock">
 
           </div>
-          <div class="col-5 mobile-col-12 text_clock_col">
+          <div class="col-5  text_clock_col">
               <p class="text_clock_title">48 Hour Raincheck Guarantee!</p>
               <p class="text_clock_description">
                   We know that one of the most annoying things with windows is paying to have them clean only for it to rain the next day. That is why it is our promise that if it rains within 48-hours of us cleaning
