--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -1,4 +1,11 @@
+@media screen and (orientation:landscape) and (max-width:700px) and (min-width:491px){
 
+
+.knob_s{
+  top:30px;right:-5px;position:relative
+}
+
+}
 .work_inner_container{
   padding-top:5%;
   padding-bottom:10%;
@@ -989,12 +996,8 @@ flex:100%;
 }
 
 
-@media screen and (oritentation:landscape) and (max-width:700px) and (min-width:491px){
-  
 
-
-}
-@media screen and (oritentation:portrait)and  (max-width:490px){
+@media screen and (orientation:portrait)and  (max-width:490px){
   .clock_col{
     max-width: 1000% !important;
     width:100% !important;
