--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -105,7 +105,7 @@
 
               <img class="ring width-100" src = "./assets/images/1.png"style="position:absolute;top:100%;"/>
 
-              <div class="knob_s"style="top:40px;right:-10px;position:relative">
+              <div class="knob_s">
               <div class="knob_short_parent">
                 <div class="knob_short"></div>
                 <div class="knob_line_short"></div>
