--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -162,7 +162,11 @@ span{
    padding:0;
 }
 
-
+@media screen and (max-width:700px) and (orientation:landscape) and (min-width:491px){
+  .banners{
+    top:55%; 
+  }
+}
 @media screen and (max-width:1100px) and (orientation:portrait) and (min-width:700px){
   .showcase_container{
     margin-top: 1% !important;
