--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -1,4 +1,4 @@
-@media screen and (orientation:landscape) and (max-width:700px) and (min-width:491px){
+@media screen and (orientation:landscape) and (max-width:800px) and (min-width:391px){
 
 
 .knob_s{
@@ -11,6 +11,9 @@
 }
 .what_we_clean_s{
   margin-top: 7.5%;
+}
+.clock_col{
+  margin-top: 15%;
 }
 }
 .knob_s{
