--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -15,6 +15,11 @@
 .clock_col{
   margin-top: 5%;
 }
+.text_clock_title{
+  width:100%;
+  font-size:18px;
+  text-align: center;
+}
 }
 .knob_s{
   top:40px;right:-10px;position:relative
