--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -164,7 +164,7 @@ span{
 
 @media screen and (max-width:800px) and (orientation:landscape) and (min-width:391px){
   .banners{
-    top:55%;
+    top:55% !important;
   }
 }
 @media screen and (max-width:1100px) and (orientation:portrait) and (min-width:700px){
